nav flicker fix - very short animation time

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -159,7 +159,7 @@ button {
 }
 
 .no-transition {
-	transition: height 0.01s;
+	transition: height 0.005s;
 }
 
 // SECTIONS/HEADERS
